# streamlitproject2

./: pyproject.toml
.devcontainer/: devcontainer.json
src/streamlitproject2/: 01_Home.py  app_state.py  main.py  page_1.py  page_2.py  page_3.py  page_4.py  st_config.py
src/streamlitproject2/pages/: 02_Data Summary.py  03_Time Histories.py
