[project]
name = "streamlitproject2"
version = "0.1.0"
description = ""
authors = [
    {name = "thumpercastle",email = "tony.ryb@gmail.com"}
]
readme = "README.md"
requires-python = "<=3.13,>=3.11"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)",
    "pycoustic (>=0.1.16,<0.2.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "plotly (==6.3.1)"
]

[tool.poetry]
packages = [{include = "streamlitproject2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
